Version 4.5.0.8 'dan Eider':
	- merge travis branch
	- hint with comment fallthrough to avoid warning
	- reload-tls-certs PR#236 (by Arne Georg Gisnås Gleditsch)
	- minor fixe PR#223 (by Pavel Kretov)
	  move rm Makefile to distclean
	  list all phony targets
	- fix typo PR#253 (by Orsiris de Jong)
	- Fix WebRTC client IPv6 stuck connection. (issue #217)
	  THX toq damencho, vol4iniche
	- Spelling fixes.
	- Add a warning if --lt-cred-mech and --use-auth-secret both presents.
	- Revert "Add the realm parameter in the example config file (by Domenico)"
	- Fix for Verbose config file option -v cli option overridea
	- Add a Notice to config about realm default value is the domain name.
	- Update total allocation usage on client shutdown
	- fix total and user quota mix-up
	- Fixed typos in postinstall.txt (by Prashanth Rajaram)
	- MySQL password encryption (by Mustafa Bingül & Erdem Duman)
	- Do not write to log before logging configuration is read from a config file (by eiver)
	- Add more explanation on use-auth-secret / REST in example config (by Krithin Sitaram)
	- Add a Warning if lines in config file ends with semicolon (by heyheyjc)
	- Fix --prod pointer bug
	- Fix auth server thread detach race (by weishuyin)

12/10/2017 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.7 'dan Eider':
	- Misc security improvements.
	
10/17/2016 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.6 'dan Eider':
	- Typos in the text fixed.
	- TLS1.2 support fixed.
	- uclient minor performance tweak.
	- Issue #113 fixed (by David Benjamin)
	- Report total traffic used per allocation via Redis (by Bradley T. Hughes)
	- Add the realm parameter in the example config file (by Domenico)

08/27/2016 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.5 'dan Eider':
	- Typos in the text fixed.
	- LibreSSL compatibility fixed.
	- "read_timeout" option support for MySQL.
	- new NAT behavior discovery utilty. 
	- new OAuth access_token encrypt/decrypt utilty.