@@ -612,6 +612,15 @@
 #
 #mobility
 
+# Allocate Address Family according 
+# If enabled then TURN server allocates address family according  the TURN 
+# Client <=> Server communication address family.
+# (By default coTURN works according RFC 6156.)
+# !!Warning: Enabling this option breaks RFC6156 section-4.2 (violates use default IPv4)!!
+#
+#keep-address-family
+
+
 # User name to run the process. After the initialization, the turnserver process
 # will make an attempt to change the current user ID to that user.
 #
