@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "15 August 2018" "" ""
+.TH TURN 1 "06 September 2018" "" ""
 .SH GENERAL INFORMATION
 
 The \fBTURN Server\fP project contains the source code of a TURN server and TURN client 
@@ -766,6 +766,12 @@ will make an attempt to change the current user ID to that user.
 \fB\-\-proc\-group\fP
 Group name to run the process. After the initialization, the \fIturnserver\fP process
 will make an attempt to change the current group ID to that group.
+.TP
+.B
+\fB\-K\fP, \fB\-\-keep\-address\-family\fP
+TURN server allocates address family according TURN
+Client <=> Server communication address family.
+!! It breaks RFC6156 section\-4.2 (violates default IPv4) !!
 .TP
 .B
 \fB\-\-cli\-ip\fP
