@@ -8,7 +8,7 @@ Version 4.5.0.8 'dan Eider':
 	  list all phony targets
 	- fix typo PR#253 (by Orsiris de Jong)
 	- Fix WebRTC client IPv6 stuck connection. (issue #217)
-	  THX toq damencho, vol4iniche
+	  THX to damencho, vol4iniche
 	- Spelling fixes.
 	- Add a warning if --lt-cred-mech and --use-auth-secret both presents.
 	- Revert "Add the realm parameter in the example config file (by Domenico)"
@@ -23,6 +23,8 @@ Version 4.5.0.8 'dan Eider':
 	- Add a Warning if lines in config file ends with semicolon (by heyheyjc)
 	- Fix --prod pointer bug
 	- Fix auth server thread detach race (by weishuyin)
+	- New Feature: Add -K --keep-address-family 
+	  Be aware if you enable it, then it breaks rfc6156 section-4.2 (default IPv4 family)
 
 12/10/2017 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.5.0.7 'dan Eider':
